--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "@babel/preset-react": "^7.6.3",
     "@material-ui/core": "^4.5.1",
     "babel-loader": "^8.0.6",
-    "bankdeets": "^0.1.6",
+    "bankdeets": "^0.1.7",
     "cleave.js": "^1.5.3",
     "clsx": "^1.0.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
-    "react-translated": "^2.4.0"
+    "react-translated": "^2.4.0",
+    "reactide-config": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
