--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
+    "react-simple-maps": "^1.0.0-beta.0",
     "react-translated": "^2.4.0",
     "reactide-config": "^1.0.2"
   },
