--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@babel/preset-react": "^7.6.3",
     "@material-ui/core": "^4.5.1",
     "babel-loader": "^8.0.6",
-    "bankdeets": "^0.1.17",
+    "bankdeets": "^0.1.19",
     "cleave.js": "^1.5.3",
     "clsx": "^1.0.4",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-ga": "^2.7.0",
