--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@babel/preset-react": "^7.6.3",
     "@material-ui/core": "^4.5.1",
     "babel-loader": "^8.0.6",
+    "bankdeets": "^0.1.29",
     "cleave.js": "^1.5.3",
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-ga": "^2.7.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
     "react-simple-maps": "^1.0.0-beta.0",
     "react-translated": "^2.4.0",
